# nist-frvt-archive

./: .gitignore  README.md
11/: issue.cpp  issue2.txt  run.log.0  run.log.1  timeit.txt
11/doc/: version.txt
11/scripts/: run_testdriver.sh
11/src/include/mkldnn/: mkldnn_version.h
11/src/nullImpl/: ArcFace.cpp  ArcFace.h  CMakeLists.txt  CropByLm.cpp  FaceAlign.cpp  FaceAlign.h  FacePreprocess.h  RetinaFace.cpp  RetinaFace.h  nullimplfrvt11.cpp  nullimplfrvt11.h
11/src/testdriver/: validate11.cpp
